--- a/crates/park/Cargo.toml
+++ b/crates/park/Cargo.toml
@@ -6,3 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = { version = "0.27.2", features = ["default", "__screenshot"] }
+egui_extras = { version = "0.27.2", features = ["default", "image"] }
+env_logger = { version = "0.11.3", features = ["auto-color", "humantime"] }
+egui_dock = { version = "0.12" }
+egui_tiles = { version = "0.8" }
+rfd = "0.13"
+polars = { version = "0.39", features = [
+  "dtype-struct",
+  "parquet",
+  "default",
+  "lazy",
+] }
